# elfutils

./: .cvsignore  .gitignore  .mtn-ignore  ABOUT-NLS  CONTRIBUTING  COPYING  CREATE-MINI  ChangeLog  Makefile.am  NEWS  README  THANKS  TODO  configure.ac
backends/: ChangeLog  Makefile.am  aarch64_init.c  aarch64_initreg.c  aarch64_regs.c  aarch64_reloc.def  aarch64_symbol.c  alpha_init.c  alpha_regs.c  alpha_reloc.def  alpha_retval.c  alpha_symbol.c  arm_attrs.c  arm_auxv.c  arm_corenote.c  arm_init.c  arm_initreg.c  arm_regs.c  arm_reloc.def  arm_retval.c  arm_symbol.c  bpf_init.c  bpf_regs.c  bpf_reloc.def  bpf_symbol.c  common-reloc.c  i386_auxv.c  i386_cfi.c  i386_corenote.c  i386_init.c  i386_regs.c  i386_reloc.def  i386_retval.c  i386_symbol.c  ia64_init.c  ia64_regs.c  ia64_reloc.def  ia64_retval.c  ia64_symbol.c  libebl_CPU.h  (+49 more)
config/: ChangeLog  Makefile.am  elfutils.spec.in  eu.am  known-dwarf.awk  mkinstalldirs  upload-release.sh  version.h.in
doc/: Makefile.am
fake-src/: FULL  Makefile.am  Makefile.in  addr2line  dwarf.h  elflint.in  nm  readelf  size  strip
lib/: ChangeLog  Makefile.am  color.c  crc32.c  crc32_file.c  dynamicsizehash.c  dynamicsizehash.h  eu-config.h  fixedsizehash.h  libeu.h  list.h  md5.c  next_prime.c  printversion.c  sha1.c  system.h  version.c  xmalloc.c  xstrdup.c  xstrndup.c
libasm/: ChangeLog  Makefile.am  asm_abort.c  asm_addint16.c  asm_addint32.c  asm_addint64.c  asm_addint8.c  asm_addsleb128.c  asm_addstrz.c  asm_adduint16.c  asm_adduint32.c  asm_adduint64.c  asm_adduint8.c  asm_adduleb128.c  asm_align.c  asm_begin.c  asm_end.c  asm_error.c  asm_fill.c  asm_getelf.c  asm_newabssym.c  asm_newcomsym.c  asm_newscn.c  asm_newscn_ingrp.c  asm_newscngrp.c  asm_newsubscn.c  asm_newsym.c  asm_scngrp_newsignature.c  disasm_begin.c  disasm_cb.c  disasm_end.c  disasm_str.c  libasm.h  libasm.map  libasmP.h  symbolhash.c  symbolhash.h
libcpu/: ChangeLog  Makefile.am  bpf_disasm.c  i386_data.h  i386_disasm.c  i386_gendis.c  i386_lex.l  i386_parse.y  memory-access.h  x86_64_disasm.c
libcpu/defs/: i386  x86_64
libdw/: ChangeLog  Makefile.am  cfi.c  cfi.h  cie.c  dwarf.h  dwarf_abbrev_hash.c  dwarf_abbrev_hash.h  dwarf_abbrevhaschildren.c  dwarf_addrdie.c  dwarf_aggregate_size.c  dwarf_arrayorder.c  dwarf_attr.c  dwarf_attr_integrate.c  dwarf_begin.c  dwarf_begin_elf.c  dwarf_bitoffset.c  dwarf_bitsize.c  dwarf_bytesize.c  dwarf_cfi_addrframe.c  dwarf_cfi_end.c  dwarf_child.c  dwarf_cuoffset.c  dwarf_decl_column.c  dwarf_decl_file.c  dwarf_decl_line.c  dwarf_die_addr_die.c  dwarf_diecu.c  dwarf_diename.c  dwarf_dieoffset.c  dwarf_end.c  dwarf_entry_breakpoints.c  dwarf_entrypc.c  dwarf_error.c  dwarf_filesrc.c  dwarf_formaddr.c  dwarf_formblock.c  dwarf_formflag.c  dwarf_formref.c  dwarf_formref_die.c  (+96 more)
libdwarf/: ChangeLog  Makefile.am  dwarf.h  dwarf_abbrev_hash.c  dwarf_abbrev_hash.h  dwarf_arrayorder.c  dwarf_attr.c  dwarf_attrlist.c  dwarf_bitoffset.c  dwarf_bitsize.c  dwarf_bytesize.c  dwarf_child.c  dwarf_dealloc.c  dwarf_die_CU_offset.c  dwarf_diename.c  dwarf_dieoffset.c  dwarf_elf_init.c  dwarf_errmsg.c  dwarf_errno.c  dwarf_error.c  dwarf_find_macro_value_start.c  dwarf_finish.c  dwarf_form.c  dwarf_formaddr.c  dwarf_formblock.c  dwarf_formflag.c  dwarf_formref.c  dwarf_formsdata.c  dwarf_formstring.c  dwarf_formudata.c  dwarf_get_abbrev.c  dwarf_get_abbrev_children_flag.c  dwarf_get_abbrev_code.c  dwarf_get_abbrev_entry.c  dwarf_get_abbrev_tag.c  dwarf_get_address_size.c  dwarf_get_arange.c  dwarf_get_arange_info.c  dwarf_get_aranges.c  dwarf_get_cie_info.c  (+47 more)
libdwelf/: ChangeLog  Makefile.am  dwelf_strtab.c  libdwelf.h  libdwelfP.h
libdwfl/: =ideas  =oops  ChangeLog  Makefile.am  argp-std.c  core-file.c  cu.c  derelocate.c  dwfl_addrdie.c  dwfl_addrdwarf.c  dwfl_addrmodule.c  dwfl_begin.c  dwfl_build_id_find_elf.c  dwfl_cumodule.c  dwfl_dwarf_line.c  dwfl_end.c  dwfl_error.c  dwfl_frame.c  dwfl_frame_pc.c  dwfl_frame_regs.c  dwfl_getdwarf.c  dwfl_getmodules.c  dwfl_getsrc.c  dwfl_getsrclines.c  dwfl_lineinfo.c  dwfl_linemodule.c  dwfl_module.c  dwfl_module_addrdie.c  dwfl_module_addrname.c  dwfl_module_addrsym.c  dwfl_module_build_id.c  dwfl_module_dwarf_cfi.c  dwfl_module_eh_cfi.c  dwfl_module_getdwarf.c  dwfl_module_getelf.c  dwfl_module_getsrc.c  dwfl_module_getsrc_file.c  dwfl_module_getsym.c  dwfl_module_info.c  dwfl_module_nextcu.c  (+33 more)
libebl/: ChangeLog  Makefile.am  alpha_destr.c  alpha_init.c  alpha_reloc.def  alpha_symbol.c  arm_destr.c  arm_init.c  arm_symbol.c  ebl-hooks.h  ebl_check_special_symbol.c  eblabicfi.c  eblauxvinfo.c  eblbackendname.c  eblbsspltp.c  eblclosebackend.c  eblcopyrelocp.c  eblcorenote.c  eblcorenotetypename.c  ebldebugscnp.c  ebldynamictagcheck.c  ebldynamictagname.c  eblelfclass.c  eblelfdata.c  eblelfmachine.c  eblgotpcreloccheck.c  eblgstrtab.c  eblmachineflagcheck.c  eblmachineflagname.c  eblnonerelocp.c  eblobjecttypename.c  eblobjnote.c  eblobjnotetypename.c  eblopenbackend.c  eblosabiname.c  eblregname.c  eblrelativerelocp.c  eblrelocsimpletype.c  eblreloctypecheck.c  eblreloctypename.c  (+59 more)
libelf/: ChangeLog  Makefile.am  abstract.h  common.h  dl-hash.h  elf-knowledge.h  elf.h  elf32_checksum.c  elf32_fsize.c  elf32_getehdr.c  elf32_getphdr.c  elf32_getshdr.c  elf32_newehdr.c  elf32_newphdr.c  elf32_offscn.c  elf32_updatefile.c  elf32_updatenull.c  elf32_xlatetof.c  elf32_xlatetom.c  elf64_checksum.c  elf64_fsize.c  elf64_getehdr.c  (+110 more)
libelf-po/: .cvsignore  ChangeLog  Makefile.in.in  Makevars  POTFILES.in
tests/: .mt-attrs  ChangeLog  Makefile.am  addrcfi.c  addrscopes.c  addsections.c  alldts.c  allfcts.c  allregs.c  arextract.c  arsymtest.c  asm-tst1.c  asm-tst2.c  asm-tst3.c  asm-tst4.c  asm-tst5.c  asm-tst6.c  asm-tst7.c  asm-tst8.c  asm-tst9.c  backtrace-child.c  backtrace-data.c  backtrace-dwarf.c  backtrace-subr.sh  backtrace.c  cleanup-13.c  configure.ac  coverage.sh  deleted.c  dwarf-die-addr-die.c  dwarf-getmacros.c  dwarf-getstring.c  dwarfcfi.c  dwfl-addr-sect.c  dwfl-bug-fd-leak.c  dwfl-bug-report.c  dwfl-proc-attach.c  dwfl-report-elf-align.c  dwflmodtest.c  dwflsyms.c  (+159 more)
(+57 files in other folders)
